--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ accelerate = "^0.25.0"
 bitsandbytes = "^0.41.3.post2"
 autoawq = "^0.1.8"
 auto-gptq = "^0.6.0"
+llama-index = "^0.9.29"
+ctransformers = {extras = ["cuda"], version = "^0.2.27"}
+panel = "^1.3.6"
 
 
 
