--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,12 +23,17 @@ optimum = {extras = ["onnxruntime"], version = "^1.16.1"}
 sacremoses = "^0.1.1"
 langchain = "^0.0.353"
 accelerate = "^0.25.0"
-bitsandbytes = "^0.41.3.post2"
+bitsandbytes = "0.41.0"
 autoawq = "^0.1.8"
 auto-gptq = "^0.6.0"
 llama-index = "^0.9.29"
 ctransformers = {extras = ["cuda"], version = "^0.2.27"}
 panel = "^1.3.6"
+peft = "^0.7.1"
+trl = "0.7.4"
+fastapi = "^0.109.0"
+uvicorn = "^0.26.0"
+requests = "^2.31.0"
 
 
 
