--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ requests = "^2.31.0"
 fire = "^0.5.0"
 omegaconf = "^2.3.0"
 mlflow = "^2.10.0"
+datasets = "^2.16.1"
+tensorboard = "^2.15.1"
 
 
 
