--- a/scripts/apps/conf/inference-panel-ctransformers.yaml
+++ b/scripts/apps/conf/inference-panel-ctransformers.yaml
@@ -1,4 +1,3 @@
-
 - mistral-7b-instruct-v0.1-gguf-ctransformers-cpu:
     model_config:
       model_path_or_repo_id: TheBloke/Mistral-7B-Instruct-v0.1-GGUF
@@ -6,12 +5,15 @@
       model_type: mistral
 
     prompt_config:
-      template: '''<s>[INST] {user} [/INST]'''
+      template: '<s>[INST] {user} [/INST]'
       input_variables:
         - user
+      fields:
 
     generation_config:
-      max_new_tokens: 128
+      max_new_tokens: 64
+      seed: 42
+      top_p: 0.7
       stream: true
 
 
@@ -22,10 +24,14 @@
       model_type: mistral
 
     prompt_config:
-      template: '''<s>[INST] {user} [/INST]'''
+      template: '<s>[INST] {user} [/INST]'
       input_variables:
         - user
+      fields:
 
     generation_config:
-      max_new_tokens: 128
+      max_new_tokens: 64
+      seed: 42
+      top_p: 0.7
       stream: true
+
