--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,10 @@ sentence-transformers = "^2.2.2"
 optimum = {extras = ["onnxruntime"], version = "^1.16.1"}
 sacremoses = "^0.1.1"
 langchain = "^0.0.353"
-accelerate = "^0.25.0"
-bitsandbytes = "0.41.0"
+accelerate = "^0.28.0"
+bitsandbytes = "0.43"
 autoawq = "^0.1.8"
-auto-gptq = "^0.6.0"
+auto-gptq = "~0.6.0"
 llama-index = "^0.9.29"
 ctransformers = {extras = ["cuda"], version = "^0.2.27"}
 panel = "^1.3.6"
